force-app/main/default/objects/Deal_Transaction_Line__c/Deal_Transaction_Line__c.object-meta.xml
<CustomObject>
    <label>Deal Transaction Line</label>
    <nameField>
        <displayFormat>DTL-{000000}</displayFormat>
        <label>Deal Transaction Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Transaction Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>