force-app/main/default/objects/Deal_Transaction_Line__c/fields/Actual_Home_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Home_Value__c</fullName>
    <formula>if(
  text(CurrencyIsoCode) = text(Deal_Transaction__r.Company__r.CurrencyIsoCode),
  Net_Amount__c,
  Net_Amount__c / Deal_Transaction__r.Deal_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Home Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>