force-app/main/default/objects/Deal_Transaction_Line__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>The actual amount of the invoice or payment inclusive of GST if applicable</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>