force-app/main/default/objects/Deal_Transaction_Line__c/fields/Cash_Flow_Date__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Date__c</fullName>
    <formula>/*case(
  Deal_Transaction__r.RecordType.Name,
  &quot;Single-Line Expense&quot;, 
    Transaction_Date__c + 
    Deal_Transaction__r.Account__r.c2g__CODADaysOffset1__c,
  &quot;Multiple-Line Expense&quot;,
    Deal_Transaction__r.Transaction_Date__c + 
    Deal_Transaction__r.Account__r.c2g__CODADaysOffset1__c,
  Deal_Transaction__r.Transaction_Date__c
)*/
Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Flow Date</label>
    <type>Date</type>
</CustomField>