force-app/main/default/objects/Deal_Transaction_Line__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>Commission_Amount__c &lt;&gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <type>Checkbox</type>
</CustomField>