force-app/main/default/objects/Deal_Transaction_Line__c/fields/Commission_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Taxable_Amount__c</fullName>
    <formula>Commission_Amount__c / (1+ ( Deal_Transaction__r.Tax_Rate__c /100 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>