force-app/main/default/objects/Deal_Transaction_Line__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>if(
   Account__c = &quot;PhoneAFlight&quot;,
   &quot;a9e2x000000L2QRAA0&quot;,
   Deal_Transaction__r.Company__r.Id
)</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>