force-app/main/default/objects/Deal_Transaction_Line__c/fields/Control_Account__c.field-meta.xml
<CustomField>
    <fullName>Control_Account__c</fullName>
    <formula>if(
Status1__c = &quot;Cancelled&quot;,
&quot;1200 - Accounts Receivable&quot;,
if(
Commission__c,
&quot;1440 - Deferred Commissions&quot;,
&quot;2230 - Deferred Revenue&quot;
)
)


/*if(
Status1__c = &quot;Cancelled&quot;,
&quot;1200 - Accounts Receivable&quot;,
if(
Commission__c,
&quot;1440 - Deferred Commissions&quot;,
&quot;2230 - Deferred Revenue&quot;
)
)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Control Account</label>
    <type>Text</type>
</CustomField>