force-app/main/default/objects/Deal_Transaction_Line__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipName>ERP_Order_Line_Details</relationshipName>
    <type>Lookup</type>
</CustomField>