force-app/main/default/objects/Deal_Transaction_Line__c/fields/Deal_Rate__c.field-meta.xml
<CustomField>
    <fullName>Deal_Rate__c</fullName>
    <label>Deal Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>