force-app/main/default/objects/Deal_Transaction_Line__c/fields/Deal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Deal_Transaction__c</fullName>
    <label>Deal Transaction</label>
    <referenceTo>Deal_Transaction__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>ERP_Order_Line_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>