force-app/main/default/objects/Deal_Transaction_Line__c/fields/Deal_Transaction_Draft__c.field-meta.xml
<CustomField>
    <fullName>Deal_Transaction_Draft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Transaction Draft</label>
    <referenceTo>Deal_Transaction__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines (Deal Transaction Draft)</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines_Draft</relationshipName>
    <type>Lookup</type>
</CustomField>