force-app/main/default/objects/Deal_Transaction_Line__c/fields/Deal_Transaction_Line__c.field-meta.xml
<CustomField>
    <fullName>Deal_Transaction_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Transaction Line</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Deal_Transaction_Line__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Forward Contract</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deal_Transaction_Line__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>