force-app/main/default/objects/Deal_Transaction_Line__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Date</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>