force-app/main/default/objects/Deal_Transaction_Line__c/fields/Destination_Company__c.field-meta.xml
<CustomField>
    <fullName>Destination_Company__c</fullName>
    <formula>case( RecordType.Name,

&quot;Multi-Line Expense&quot;,
TAD_Order__r.Company__c,

&quot;Single-Line Expense&quot;,
if(
   isblank(Deal_Transaction__r.Destination_Company__c),
   Company__c, 
   Deal_Transaction__r.Destination_Company__c
),

Deal_Transaction__r.Destination_Company__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Company</label>
    <type>Text</type>
</CustomField>