force-app/main/default/objects/Deal_Transaction_Line__c/fields/Destination_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Destination_Net_Value__c</fullName>
    <formula>if(
   not(isblank(Destination_Company__c )),
   Net_Amount__c,
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>