force-app/main/default/objects/Deal_Transaction_Line__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 1</label>
    <type>Text</type>
</CustomField>