force-app/main/default/objects/Deal_Transaction_Line__c/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <formula>if(
  not(isblank(Departure_Date__c)),
  Departure_Date__r.Name, 
  Deal_Transaction__r.Dimension_2__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 2</label>
    <type>Text</type>
</CustomField>