force-app/main/default/objects/Deal_Transaction_Line__c/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 3</label>
    <type>Text</type>
</CustomField>