force-app/main/default/objects/Deal_Transaction_Line__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>if(
  text(Payment_Terms__r.Days9__c)= &quot;&quot;,
  Transaction_Date__c,
  Transaction_Date__c + value(text(Payment_Terms__r.Days9__c))
)

/*
if(
  text(Payment_Terms__r.MPT_Join__r.Days__c)= &quot;&quot;,
  Transaction_Date__c,
  Transaction_Date__c + value(text(Payment_Terms__r.MPT_Join__r.Days__c))
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>