force-app/main/default/objects/Deal_Transaction_Line__c/fields/Expected_Dual_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Dual_Value__c</fullName>
    <formula>if(
  text(Deal_Transaction__r.Company__r.CurrencyIsoCode) = &quot;AUD&quot;,
  Expected_Home_Value__c,
  Expected_Home_Value__c / Deal_Transaction__r.Dual_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Dual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>