force-app/main/default/objects/Deal_Transaction_Line__c/fields/Expense_Account1__c.field-meta.xml
<CustomField>
    <fullName>Expense_Account1__c</fullName>
    <label>Expense Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>