force-app/main/default/objects/Deal_Transaction_Line__c/fields/Expense_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_Account__c</fullName>
    <formula>if(
CONTAINS(RecordType.Name, &apos;Line Expense&apos;),
CASE(ff_Component_Type__c,
&quot;Flight&quot;,&quot;5020 - Air Ticket Expenses&quot;,
&quot;Cruise&quot; , &quot;5030 - Cruise Expenses&quot;,
&quot;S/Over&quot; , &quot;5050 - Stopovers&quot;,
&quot;Transfer&quot; , &quot;5060 - Transfers &amp; Lounge Passes&quot;,
CASE(TAD_Order__r.RecordType_Name__c,
&quot;TC&quot;,&quot;5410 - Commissions Paid - Travellers Choice&quot;,
&quot;WT&quot;,&quot;5420 - Commissions Paid - Other&quot;,
&quot;5010 - Merchant Expenses&quot;
)),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Account</label>
    <type>Text</type>
</CustomField>