force-app/main/default/objects/Deal_Transaction_Line__c/fields/ff_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>ff_Component_Type__c</fullName>
    <formula>IF( RecordType.Name=&apos;Multi-Line Expense&apos;,  TEXT(ff_Order_Line__r.Component__r.Component_Type__c) , Deal_Transaction__r.ff_Component_Type__c)</formula>
    <label>Component Type</label>
    <type>Text</type>
</CustomField>