force-app/main/default/objects/Deal_Transaction_Line__c/fields/ff_credit_note__c.field-meta.xml
<CustomField>
    <fullName>ff_credit_note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Note?</label>
    <type>Checkbox</type>
</CustomField>