force-app/main/default/objects/Deal_Transaction_Line__c/fields/ff_Is_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>ff_Is_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Adjustment?</label>
    <type>Checkbox</type>
</CustomField>