force-app/main/default/objects/Deal_Transaction_Line__c/fields/ff_Is_Invoiced_Internal__c.field-meta.xml
<CustomField>
    <fullName>ff_Is_Invoiced_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Invoiced Internal</label>
    <type>Checkbox</type>
</CustomField>