force-app/main/default/objects/Deal_Transaction_Line__c/fields/ff_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>ff_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>order_line_POE__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>