force-app/main/default/objects/Deal_Transaction_Line__c/fields/ffOffset_Account__c.field-meta.xml
<CustomField>
    <fullName>ffOffset_Account__c</fullName>
    <label>Offset Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>