force-app/main/default/objects/Deal_Transaction_Line__c/fields/Inc_Comms__c.field-meta.xml
<CustomField>
    <fullName>Inc_Comms__c</fullName>
    <formula>Commission_Amount__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inc Comms</label>
    <type>Checkbox</type>
</CustomField>