force-app/main/default/objects/Deal_Transaction_Line__c/fields/Income_Statement_Account__c.field-meta.xml
<CustomField>
    <fullName>Income_Statement_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Income Statement Account</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines (Income Statement Account)</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>