force-app/main/default/objects/Deal_Transaction_Line__c/fields/Invoice_Rate__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Rate__c</fullName>
    <label>Invoice Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>