force-app/main/default/objects/Deal_Transaction_Line__c/fields/Is_Cabins__c.field-meta.xml
<CustomField>
    <fullName>Is_Cabins__c</fullName>
    <formula>and(
    contains(RecordType.Name,&quot;Multi&quot;),
    Account__c = &quot;Trip a Deal Pty Ltd (Merchant)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cabins</label>
    <type>Checkbox</type>
</CustomField>