force-app/main/default/objects/Deal_Transaction_Line__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>