force-app/main/default/objects/Deal_Transaction_Line__c/fields/Merchant_Type__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Type__c</fullName>
    <formula>Deal_Transaction__r.ff_Merchant_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Type</label>
    <type>Text</type>
</CustomField>