force-app/main/default/objects/Deal_Transaction_Line__c/fields/Negative_Expense_Variance__c.field-meta.xml
<CustomField>
    <fullName>Negative_Expense_Variance__c</fullName>
    <formula>-Expense_Variance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Expense Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>