force-app/main/default/objects/Deal_Transaction_Line__c/fields/Negative_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negative_Tax_Amount__c</fullName>
    <formula>-Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>