force-app/main/default/objects/Deal_Transaction_Line__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <formula>if(
RecordType.Name = &quot;Multi-Line Expense&quot;,
Amount__c * Tax_Factor__c,
Amount__c - Tax_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>