force-app/main/default/objects/Deal_Transaction_Line__c/fields/Offset_Account__c.field-meta.xml
<CustomField>
    <fullName>Offset_Account__c</fullName>
    <formula>case( RecordType.Name,
&quot;Multi-Line Expense&quot;,
&quot;1410 - Prepayments - Deals&quot;,  
if(
  and(
    not(Deal_Transaction__r.Deal__r.Is_Escapes__c),
    not(isblank(Deal_Transaction__r.Transaction_Date__c)),
    Deal_Transaction__r.Transaction_Date__c &lt;=
      Deal_Transaction__r.Departure_Date__r.date__c
  ),
  &quot;1410 - Prepayments - Deals&quot;,
  &quot;2220 - Accruals - Deals&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Account</label>
    <type>Text</type>
</CustomField>