force-app/main/default/objects/Deal_Transaction_Line__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item</label>
    <referenceTo>order_line_item__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>