force-app/main/default/objects/Deal_Transaction_Line__c/fields/Original_Deal_Transaction_Line__c.field-meta.xml
<CustomField>
    <fullName>Original_Deal_Transaction_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Deal Transaction Line</label>
    <referenceTo>Deal_Transaction_Line__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>