force-app/main/default/objects/Deal_Transaction_Line__c/fields/P_L_Override_Account__c.field-meta.xml
<CustomField>
    <fullName>P_L_Override_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P&amp;L Override Account</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>