force-app/main/default/objects/Deal_Transaction_Line__c/fields/Partial_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Partial_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Allocation</label>
    <type>Checkbox</type>
</CustomField>