force-app/main/default/objects/Deal_Transaction_Line__c/fields/Payable_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Payable_Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Credit Note</label>
    <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>