force-app/main/default/objects/Deal_Transaction_Line__c/fields/Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Invoice</label>
    <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>