force-app/main/default/objects/Deal_Transaction_Line__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Terms</label>
    <referenceTo>Merchant_Terms__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>