force-app/main/default/objects/Deal_Transaction_Line__c/fields/Payment_Terms_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Days__c</fullName>
    <label>Payment Terms Days</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>