force-app/main/default/objects/Deal_Transaction_Line__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Transaction</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>