force-app/main/default/objects/Deal_Transaction_Line__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>if(
  month(today()) &lt;= 6,
  text(year(today())) &amp; &quot;/&quot; &amp; right(lpad(text(month(today()) + 6),3,&quot;0&quot;),3),
  text(year(today())+1) &amp; &quot;/&quot; &amp; right(lpad(text(month(today()) - 6),3,&quot;0&quot;),3)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <type>Text</type>
</CustomField>