force-app/main/default/objects/Deal_Transaction_Line__c/fields/PNR_Accounting_Line__c.field-meta.xml
<CustomField>
    <fullName>PNR_Accounting_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNR Accounting Line</label>
    <referenceTo>PNR_Accounting_Line__c</referenceTo>
    <relationshipLabel>Deal Transaction Lines</relationshipLabel>
    <relationshipName>Deal_Transaction_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>