force-app/main/default/objects/Deal_Transaction_Line__c/fields/Post_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Departure_Date__c</fullName>
    <formula>and(
   RecordType.Name = &quot;Single-Line Expense&quot;,
   or(
     Transaction_Date__c &gt;   Departure_Date__r.date__c ,
     isblank(Transaction_Date__c),
     isblank(Vendor_Invoice_Number__c),
     Is_Escape_Deal__c 
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Departure Date</label>
    <type>Checkbox</type>
</CustomField>