force-app/main/default/objects/Deal_Transaction_Line__c/fields/Pre_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Departure_Date__c</fullName>
    <formula>or(
  and(
      RecordType.Name = &quot;Multi-Line Expense&quot;,
      Transaction_Date__c &lt;  Departure_Date__r.date__c ,
      isblank(  Amount__c  ) 
     ),
  and(
      not(isblank( Vendor_Invoice_Number__c  )),
      Transaction_Date__c &lt; Departure_Date__r.date__c,
       Is_Escape_Deal__c = false
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Departure Date</label>
    <type>Checkbox</type>
</CustomField>