force-app/main/default/objects/Deal_Transaction_Line__c/fields/Process_CC__c.field-meta.xml
<CustomField>
    <fullName>Process_CC__c</fullName>
    <formula>and(
    Account__c = &quot;Trip a Deal Pty Ltd (Merchant)&quot;,
    not(isblank(Purchase_Date__c)),
    text(Status__c) = &quot;Cancelled&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process CC</label>
    <type>Checkbox</type>
</CustomField>