force-app/main/default/objects/Deal_Transaction_Line__c/fields/Process_CR__c.field-meta.xml
<CustomField>
    <fullName>Process_CR__c</fullName>
    <formula>and(
    or(
       Deal_Transaction__r.Is_Escape_Deal__c,
       and(
           Deal_Transaction__r.Transaction_Date__c &gt;= Recognition_Date__c,
           not(isblank(Recognition_Journal__c))
       )
    ),
    Status1__c = &quot;Superseded&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To reverse Revenue Recognition journal in case of Escapes</inlineHelpText>
    <label>Process CR</label>
    <type>Checkbox</type>
</CustomField>