force-app/main/default/objects/Deal_Transaction_Line__c/fields/Process_DJ__c.field-meta.xml
<CustomField>
    <fullName>Process_DJ__c</fullName>
    <formula>and(
    Process_SL__c,
     Deposit_Amount__c &lt;&gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process DJ</label>
    <type>Checkbox</type>
</CustomField>