force-app/main/default/objects/Deal_Transaction_Line__c/fields/Process_EC__c.field-meta.xml
<CustomField>
    <fullName>Process_EC__c</fullName>
    <formula>and(
   or(
     RecordType.Name = &quot;Single-Line Expense&quot;,
     RecordType.Name = &quot;Multi-Line Expense&quot;
     ),
   or(
     Status1__c = &quot;Superseded&quot;,
     Status1__c = &quot;Cancelled&quot;,
     text(Status__c) = &quot;Superseded&quot;,
     text(Status__c) = &quot;Cancelled&quot;,
     and(
         Status1__c = &quot;Active&quot;,
         Post_Departure_Date__c,
         not(isblank(Payable_Invoice__c)) 
        )
   ),
   not(isblank( Recognition_Journal__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process EC</label>
    <type>Checkbox</type>
</CustomField>