force-app/main/default/objects/Deal_Transaction_Line__c/fields/Process_ER__c.field-meta.xml
<CustomField>
    <fullName>Process_ER__c</fullName>
    <formula>and(
    or(
    Status1__c = &quot;Active&quot;,
    text(Status__c) = &quot;Active&quot;
    ),
    or(
       today() &lt;= Recognition_Date__c,
       Is_Escape_Deal__c 
    ),   
    or(
       RecordType.Name= &quot;Multi-Line Expense&quot;,
       and(
           RecordType.Name= &quot;Single-Line Expense&quot;,
           not(CONTAINS(Description__c,&quot;Credit&quot;))
       )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process ER</label>
    <type>Checkbox</type>
</CustomField>