force-app/main/default/objects/Deal_Transaction_Line__c/fields/Process_EV__c.field-meta.xml
<CustomField>
    <fullName>Process_EV__c</fullName>
    <formula>And( 
   RecordType.Name = &quot;Multi-Line Expense&quot;,
   Deal_Transaction__r.Processed_ML_PIN__c,
   Processed_ER__c,
   Expense_Variance__c &lt;&gt;0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process EV</label>
    <type>Checkbox</type>
</CustomField>