force-app/main/default/objects/Deal_Transaction_Line__c/fields/Process_SL__c.field-meta.xml
<CustomField>
    <fullName>Process_SL__c</fullName>
    <formula>and(
   RecordType.Name = &quot;Single-Line Expense&quot;,
   not(isblank( Vendor_Invoice_Number__c )),
   isblank( TAD_Booking_Record__c ),
   Status1__c  = &quot;Active&quot;,
   Amount__c &gt; 0
   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process SL</label>
    <type>Checkbox</type>
</CustomField>