force-app/main/default/objects/Deal_Transaction_Line__c/fields/Process_SLCN__c.field-meta.xml
<CustomField>
    <fullName>Process_SLCN__c</fullName>
    <formula>and(
   contains(Description__c,&quot;Credit&quot;),
   isblank( Payable_Credit_Note__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process SLCN</label>
    <type>Checkbox</type>
</CustomField>