force-app/main/default/objects/Deal_Transaction_Line__c/fields/Processed_CR__c.field-meta.xml
<CustomField>
    <fullName>Processed_CR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reversed Revenue Recognition journal</inlineHelpText>
    <label>Processed CR</label>
    <type>Checkbox</type>
</CustomField>