force-app/main/default/objects/Deal_Transaction_Line__c/fields/Processed_EC__c.field-meta.xml
<CustomField>
    <fullName>Processed_EC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed EC</label>
    <type>Checkbox</type>
</CustomField>