force-app/main/default/objects/Deal_Transaction_Line__c/fields/Processed_ER__c.field-meta.xml
<CustomField>
    <fullName>Processed_ER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed ER</label>
    <type>Checkbox</type>
</CustomField>