force-app/main/default/objects/Deal_Transaction_Line__c/fields/Processed_RR__c.field-meta.xml
<CustomField>
    <fullName>Processed_RR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed RR</label>
    <type>Checkbox</type>
</CustomField>