force-app/main/default/objects/Deal_Transaction_Line__c/fields/Processed_SL__c.field-meta.xml
<CustomField>
    <fullName>Processed_SL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed SL</label>
    <type>Checkbox</type>
</CustomField>