force-app/main/default/objects/Deal_Transaction_Line__c/fields/Processed_SLCN__c.field-meta.xml
<CustomField>
    <fullName>Processed_SLCN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed SLCN</label>
    <type>Checkbox</type>
</CustomField>